--- a/PULS/Base.lproj/Main.storyboard
+++ b/PULS/Base.lproj/Main.storyboard
@@ -25,8 +25,12 @@
                         <subviews>
                             <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="9lv-as-Ni6">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="barTintColor" red="0.19215686269999999" green="0.52941176469999995" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="h28-CN-Y2H"/>
+                                </connections>
                             </searchBar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pug" translatesAutoresizingMaskIntoConstraints="NO" id="7ou-QU-YSK">
                                 <rect key="frame" x="139" y="382" width="231" height="221"/>
@@ -36,8 +40,9 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EPq-QD-QUF">
-                                <rect key="frame" x="0.0" y="44" width="375" height="376"/>
+                                <rect key="frame" x="0.0" y="358" width="375" height="62"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" red="0.19215686269999999" green="0.52941176469999995" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -48,16 +53,16 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7cc-xt-n58">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nophoto" translatesAutoresizingMaskIntoConstraints="NO" id="7cc-xt-n58">
                                                     <rect key="frame" x="23" y="68" width="64" height="64"/>
-                                                    <color key="backgroundColor" red="0.19215686269999999" green="0.52941176469999995" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="7cc-xt-n58" secondAttribute="height" multiplier="1:1" id="mw5-Kb-tFJ"/>
                                                         <constraint firstAttribute="width" constant="64" id="oNN-KN-kPb"/>
                                                     </constraints>
                                                 </imageView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="B53-0j-jT3">
-                                                    <rect key="frame" x="97" y="23" width="263" height="153.5"/>
+                                                    <rect key="frame" x="97" y="28" width="263" height="143.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoI-3e-12d">
                                                             <rect key="frame" x="0.0" y="0.0" width="77" height="20.5"/>
@@ -66,7 +71,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OyU-JN-Iit">
-                                                            <rect key="frame" x="0.0" y="81.5" width="255.5" height="72"/>
+                                                            <rect key="frame" x="0.0" y="71.5" width="255.5" height="72"/>
                                                             <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis diam nulla. Vestibulum scelerisque lorem ac velit sagittis iaculis.</string>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" red="0.27058823529411763" green="0.27058823529411763" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -78,14 +83,14 @@
                                             <constraints>
                                                 <constraint firstItem="7cc-xt-n58" firstAttribute="leading" secondItem="3mv-SH-zKu" secondAttribute="leadingMargin" constant="15" id="43V-0N-cqu"/>
                                                 <constraint firstAttribute="trailing" secondItem="B53-0j-jT3" secondAttribute="trailing" constant="15" id="CQ9-Rf-ZFh"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="B53-0j-jT3" secondAttribute="bottom" constant="15" id="EZG-Gi-Krd"/>
-                                                <constraint firstItem="B53-0j-jT3" firstAttribute="top" secondItem="3mv-SH-zKu" secondAttribute="topMargin" constant="15" id="NgD-iW-hp9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="B53-0j-jT3" secondAttribute="bottom" constant="20" id="EZG-Gi-Krd"/>
+                                                <constraint firstItem="B53-0j-jT3" firstAttribute="top" secondItem="3mv-SH-zKu" secondAttribute="topMargin" constant="20" id="NgD-iW-hp9"/>
                                                 <constraint firstItem="B53-0j-jT3" firstAttribute="leading" secondItem="7cc-xt-n58" secondAttribute="trailing" constant="10" id="Xoo-a1-R5L"/>
                                                 <constraint firstItem="7cc-xt-n58" firstAttribute="centerY" secondItem="3mv-SH-zKu" secondAttribute="centerY" id="ckb-Bo-B2d"/>
                                                 <constraint firstItem="B53-0j-jT3" firstAttribute="centerY" secondItem="3mv-SH-zKu" secondAttribute="centerY" id="epR-bc-mFk"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="0.79810573630136983" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="0.70186750856164382" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="ingredientsLabel" destination="OyU-JN-Iit" id="fmI-ZE-pSz"/>
                                             <outlet property="thumbnailImageView" destination="7cc-xt-n58" id="tFx-4w-6OS"/>
@@ -98,23 +103,35 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="jpC-kh-u3j"/>
                                 </connections>
                             </tableView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No results" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iby-1b-VZH">
+                                <rect key="frame" x="66" y="200" width="243" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="iby-1b-VZH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1ZT-Bw-Dx1"/>
+                            <constraint firstItem="iby-1b-VZH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="5Fa-x1-8XD"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7ou-QU-YSK" secondAttribute="bottom" id="DwS-3U-Tae"/>
                             <constraint firstItem="EPq-QD-QUF" firstAttribute="top" secondItem="9lv-as-Ni6" secondAttribute="bottom" id="E6O-n6-7L5"/>
                             <constraint firstItem="9lv-as-Ni6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="HMe-bi-1Zi"/>
                             <constraint firstAttribute="trailing" secondItem="EPq-QD-QUF" secondAttribute="trailing" id="UbE-Uv-rFy"/>
                             <constraint firstItem="EPq-QD-QUF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bgV-97-MgJ"/>
                             <constraint firstAttribute="trailing" secondItem="9lv-as-Ni6" secondAttribute="trailing" id="c5J-cC-eie"/>
+                            <constraint firstItem="iby-1b-VZH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="200" id="fd4-1J-Df7"/>
                             <constraint firstAttribute="trailing" secondItem="7ou-QU-YSK" secondAttribute="trailing" constant="5" id="iNo-xU-klh"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EPq-QD-QUF" secondAttribute="bottom" id="r4Y-hZ-wEA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iby-1b-VZH" secondAttribute="trailing" constant="50" id="wzO-0O-tnD"/>
                             <constraint firstItem="9lv-as-Ni6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="yIo-O8-yLf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Recipe labs" id="3OM-Sf-upb"/>
                     <connections>
+                        <outlet property="errorLabel" destination="iby-1b-VZH" id="wOa-7w-7WG"/>
                         <outlet property="recipeListTableView" destination="EPq-QD-QUF" id="V94-hT-8GT"/>
+                        <outlet property="searchBar" destination="9lv-as-Ni6" id="FbX-1e-mcz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -146,6 +163,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="nophoto" width="100" height="75"/>
         <image name="pug" width="231" height="221"/>
     </resources>
 </document>
